# fastapi_template_project

./: .env  .gitignore  .gitlint  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
app/: Dockerfile  pyproject.toml  pytest.ini
backend/: .dockerignore  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg
backend/app/: __main__.py  db.py  main.py  models.py  schemas.py
backend/app/api/routes/: __init__.py  buildings.py  projects.py  sections.py
backend/app/common/: storage.py
backend/app/config/: __init__.py
backend/app/config/settings/: __init__.py  app.py  db.py  postgres.py
backend/app/data/migrations/: env.py
backend/app/data/migrations/versions/: 1ad703a81c28_add_project_alias_field.py  2f05ac9a0504_.py  4963ae24edbe_create_init_table.py  97fff2c09489_.py  c19563c92cd6_.py  cdacbd06c351_init_db.py  d62a9cc1d77b_initial.py
backend/app/data/models/base/: base.py
backend/app/data/models/projects/: projects.py
backend/app/data/sqlalchemy_session/: __init__.py
backend/app/dependencies/: resources.py
backend/app/domains/: __init__.py  base.py  filters.py
backend/app/models/: __init__.py  models.py
backend/src/: __main__.py
backend/src/api/: __init__.py
backend/src/api/routers/: __init__.py  healthcheck.py
backend/src/config/: __init__.py
backend/src/config/settings/: __init__.py  app.py  postgres.py
backend/src/data/migrations/: env.py
backend/src/data/migrations/versions/: 5978a2ef1413_new_migration.py
backend/src/data/models/: base.py
backend/src/data/models/users/: user.py
backend/tests/: test_first.py  test_projects.py
backend/tests/factories/: project.py
backend/tests/fixtures/: project.py
backend/tests/tests_routes/projects/: test_projects.py
