[tool.poetry]
name = "FastAPI template project"
version = "0.1.0"
description = "FastAPI template project"
authors = ["Denis Pavlov <dinpavlov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
psycopg2-binary = "2.9.6"
aioredis = "2.0.*"
alembic = "1.10.*"
pytest = "7.3.*"
asyncpg = "^0.27.0"

# Linting
flake8 = "6.0.*"
flake8-alphabetize = "0.0.*"
flake8-bandit = "4.1.*"
flake8-black = "0.3.*"
flake8-bugbear = "*"
flake8-builtins = "2.1.*"
flake8-class-attributes-order = "0.1.*"
flake8-comprehensions = "3.10.*"
flake8-debugger = "4.1.*"
flake8-docstrings = "1.7.*"
flake8-isort = "6.0.*"
flake8-pie = "0.16.*"
flake8-print = "5.0.*"
flake8-printf-formatting = "1.1.*"
flake8-pytest-style = "1.7.*"
flake8-walrus = "1.2.*"

# Formatting
black = "23.1.*"
isort = "5.12.*"

# Typehinting
mypy = "1.*"
mypy-extensions = "1.*"
django-stubs = "1.14.*"
djangorestframework-stubs="1.8.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
/(
  migrations
)/
'''
force-exclude = '''
  .*/__init__.py$
'''

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true
skip_glob = ["**/__init__.py", "**/migrations/*"]
