[tool.poetry]
name = "Template project"
version = "0.1.0"
description = "template project"
license = "MIT"
authors=["Denis Pavlov"]


[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["all"], version = "0.110.*"}
uvicorn = "0.29.*"
itsdangerous = "2.1.2"
pydantic-settings = "2.2.1"
alembic = "1.13.*"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.16"
fastapi-debug-toolbar="^0.6.2"


[tool.ruff]
# select = ["ALL"]
